# tt-system-firmware

./: VERSION  west.yml
.github/workflows/: hardware-smoke.yml
app/dmc/: VERSION
app/dmc/src/: main.c
app/smc/: VERSION
include/tenstorrent/: bh_arc.h
lib/tenstorrent/bh_chip/: strapping.c
soc/tenstorrent/tt_grendel/tt_grendel_smc/: tc_util_user_override.h
tests/drivers/remoteproc/d2d/: CMakeLists.txt  prj.conf  testcase.yaml
tests/drivers/remoteproc/d2d/src/: d2d_firmware.S  main.c
